WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310965
media/media-vp8-hiddenframes.html is sometimes crashing on EWS
https://bugs.webkit.org/show_bug.cgi?id=310965
Summary
media/media-vp8-hiddenframes.html is sometimes crashing on EWS
Jean-Yves Avenard [:jya]
Reported
2026-03-28 02:12:36 PDT
media/media-vp8-hiddenframes.html is sometimes crashing on EWS: ``` ASSERTION FAILED: queue.isCurrent() /Volumes/Data/worker/macOS-Tahoe-Debug-Build-EWS/build/WebKitBuild/Debug/usr/local/include/wtf/FunctionDispatcher.h(59) : void WTF::assertIsCurrent(const SerialFunctionDispatcher &) 1 0x300652b30 WTF::assertIsCurrent(WTF::SerialFunctionDispatcher const&) 2 0x300739c24 WTF::NativePromise<WTF::MediaTime, WebCore::PlatformMediaError, 0u>::ThenCallback<false, void>::disconnect() 3 0x300730cb0 WTF::NativePromiseRequest::disconnect() 4 0x3007882ec WebCore::MediaPlayerPrivateWebM::cancelPendingSeek() 5 0x300788000 WebCore::MediaPlayerPrivateWebM::~MediaPlayerPrivateWebM() 6 0x300788750 WebCore::MediaPlayerPrivateWebM::~MediaPlayerPrivateWebM() 7 0x3007887b4 WebCore::MediaPlayerPrivateWebM::~MediaPlayerPrivateWebM() 8 0x3007b1858 void WTF::ThreadSafeWeakPtrControlBlock::strongDeref<WebCore::MediaPlayerPrivateWebM, (WTF::DestructionThread)1>() const::'lambda'()::operator()() const 9 0x3007b17e4 WTF::Detail::CallableWrapper<void WTF::ThreadSafeWeakPtrControlBlock::strongDeref<WebCore::MediaPlayerPrivateWebM, (WTF::DestructionThread)1>() const::'lambda'(), void>::call() 10 0x12d86bed4 WTF::Function<void ()>::operator()() const 11 0x12d8f80d8 WTF::ensureOnMainThread(WTF::Function<void ()>&&) 12 0x3007b0f28 void WTF::ThreadSafeWeakPtrControlBlock::strongDeref<WebCore::MediaPlayerPrivateWebM, (WTF::DestructionThread)1>() const 13 0x3007b0ce8 WTF::ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<WebCore::MediaPlayerPrivateWebM, (WTF::DestructionThread)1>::deref() const 14 0x30079714c WebCore::MediaPlayerPrivateWebM::deref() const 15 0x300918dcc WTF::DefaultRefDerefTraits<WebCore::MediaPlayerPrivateInterface>::derefIfNotNull(WebCore::MediaPlayerPrivateInterface*) 16 0x300918d90 WTF::RefPtr<WebCore::MediaPlayerPrivateInterface, WTF::RawPtrTraits<WebCore::MediaPlayerPrivateInterface>, WTF::DefaultRefDerefTraits<WebCore::MediaPlayerPrivateInterface>>::~RefPtr() 17 0x300905d64 WTF::RefPtr<WebCore::MediaPlayerPrivateInterface, WTF::RawPtrTraits<WebCore::MediaPlayerPrivateInterface>, WTF::DefaultRefDerefTraits<WebCore::MediaPlayerPrivateInterface>>::~RefPtr() 18 0x307385ffc WebCore::MediaPlayer::~MediaPlayer() 19 0x307386144 WebCore::MediaPlayer::~MediaPlayer() 20 0x300647a94 void WTF::ThreadSafeWeakPtrControlBlock::strongDeref<WebCore::MediaPlayer, (WTF::DestructionThread)1>() const::'lambda'()::operator()() const 21 0x300647a28 WTF::Detail::CallableWrapper<void WTF::ThreadSafeWeakPtrControlBlock::strongDeref<WebCore::MediaPlayer, (WTF::DestructionThread)1>() const::'lambda'(), void>::call() 22 0x12d86bed4 WTF::Function<void ()>::operator()() const 23 0x12d8f80d8 WTF::ensureOnMainThread(WTF::Function<void ()>&&) 24 0x3006471c4 void WTF::ThreadSafeWeakPtrControlBlock::strongDeref<WebCore::MediaPlayer, (WTF::DestructionThread)1>() const 25 0x300646fb4 WTF::ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<WebCore::MediaPlayer, (WTF::DestructionThread)1>::deref() const 26 0x300646e54 WTF::DefaultRefDerefTraits<WebCore::MediaPlayer>::derefIfNotNull(WebCore::MediaPlayer*) 27 0x300646e20 WTF::RefPtr<WebCore::MediaPlayer, WTF::RawPtrTraits<WebCore::MediaPlayer>, WTF::DefaultRefDerefTraits<WebCore::MediaPlayer>>::~RefPtr() 28 0x300641c88 WTF::RefPtr<WebCore::MediaPlayer, WTF::RawPtrTraits<WebCore::MediaPlayer>, WTF::DefaultRefDerefTraits<WebCore::MediaPlayer>>::~RefPtr() 29 0x305fe3894 WebCore::HTMLMediaElement::clearMediaPlayer() 30 0x305fc69e8 WebCore::HTMLMediaElement::userCancelledLoad() 31 0x305fe3bdc WebCore::HTMLMediaElement::stopWithoutDestroyingMediaPlayer() com.apple.WebKit.WebContent.Development terminated (pid 38054) for reason: crash ```
rdar://173480850
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2026-03-28 02:19:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61562
EWS
Comment 2
2026-03-30 15:54:10 PDT
Committed
310263@main
(95cfc9759c8a): <
https://commits.webkit.org/310263@main
> Reviewed commits have been landed. Closing PR #61562 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug