media/media-vp8-hiddenframes.html is sometimes crashing on EWS https://bugs.webkit.org/show_bug.cgi?id=310965 rdar://173480850

Reviewed by Jer Noble.

A NativePromiseRequest must be disconnected or completed on the thread
the completion handler will run.
For ease, make m_waitForTimeBufferedPromise an AutoRejectProducer.

Covered by existing tests.

* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.h:
* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm:
(WebCore::MediaPlayerPrivateWebM::cancelPendingSeek):

Canonical link: https://commits.webkit.org/310263@main